--- a/index.html
+++ b/index.html
@@ -426,10 +426,10 @@
         </div>
 
         <div class="auth-section" id="authSection">
-            <h3>تسجيل الدخول باستخدام Google</h3>
+            <h3> تسجيل الدخول  </h3>
             <p>يرجى تسجيل الدخول لحفظ التغييرات والوصول إلى بياناتك</p>
             <button class="google-signin-btn" onclick="simulateGoogleLogin()">
-                📧 تسجيل الدخول بـ Google
+                📧 تسجيل الدخول بـ 
             </button>
         </div>
 
